Removed ; at end of some lines that would show up in view.

--- a/Sjuklöner/Views/Claims/Decide.cshtml
+++ b/Sjuklöner/Views/Claims/Decide.cshtml
@@ -18,7 +18,7 @@
             @Html.LabelFor(model => model.ClaimNumber, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10 decide-display-for">
                 @Html.DisplayFor(model => Model.ClaimNumber, null)
-                @Html.HiddenFor(model => Model.ClaimNumber);
+                @Html.HiddenFor(model => Model.ClaimNumber)
             </div>
         </div>
 
@@ -26,7 +26,7 @@
             @Html.LabelFor(model => model.CareCompany, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10 decide-display-for">
                 @Html.DisplayFor(model => Model.CareCompany, null)
-                @Html.HiddenFor(model => Model.CareCompany);
+                @Html.HiddenFor(model => Model.CareCompany)
             </div>
         </div>
 
@@ -34,7 +34,7 @@
             @Html.LabelFor(model => model.AssistantSSN, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10 decide-display-for">
                 @Html.DisplayFor(model => Model.AssistantSSN, null)
-                @Html.HiddenFor(model => Model.AssistantSSN);
+                @Html.HiddenFor(model => Model.AssistantSSN)
             </div>
         </div>
 
@@ -42,7 +42,7 @@
             @Html.LabelFor(model => model.QualifyingDate, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10 decide-display-for">
                 @Html.DisplayFor(model => Model.QualifyingDate, null)
-                @Html.HiddenFor(model => Model.QualifyingDate);
+                @Html.HiddenFor(model => Model.QualifyingDate)
             </div>
         </div>
 
@@ -50,7 +50,7 @@
             @Html.LabelFor(model => model.LastDayOfSickness, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10 decide-display-for">
                 @Html.DisplayFor(model => Model.LastDayOfSickness, null)
-                @Html.HiddenFor(model => Model.LastDayOfSickness);
+                @Html.HiddenFor(model => Model.LastDayOfSickness)
             </div>
         </div>
 
@@ -58,7 +58,7 @@
             @Html.LabelFor(model => model.ClaimSum, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10 decide-display-for">
                 @Html.DisplayFor(model => Model.ClaimSum, null)
-                @Html.HiddenFor(model => Model.ClaimSum);
+                @Html.HiddenFor(model => Model.ClaimSum)
             </div>
         </div>
 
