--- a/Sjuklöner/Content/Site.css
+++ b/Sjuklöner/Content/Site.css
@@ -125,6 +125,12 @@ li a {
 
 .container {
     padding-left: 0;
+    padding-right: 0;
+    width: 75%;
+}
+
+.navbar-header {
+    float: none;
 }
 
 .check-result-img {
