--- a/Sjuklöner/Views/Claims/StodsystemLogout.cshtml
+++ b/Sjuklöner/Views/Claims/StodsystemLogout.cshtml
@@ -3,7 +3,7 @@
     ViewBag.Title = "StodsystemLogout";
 }
 <div style="background-color:lightgrey; padding:300px; border-radius: 10px;">
-    <h2>Information om beslutet har skickats till ombudet.</h2>
-    <h4>Du loggas ut från Stödsystem, VoO</h4>
+    <h1>Information om beslutet har skickats till ombudet.</h1>
+    <h2>Du loggas nu ut från Stödsystem, VoO</h2>
 </div>
 
