--- a/Sjuklöner/Views/Claims/Decide.cshtml
+++ b/Sjuklöner/Views/Claims/Decide.cshtml
@@ -4,92 +4,98 @@
 @{
     ViewBag.Title = "View";
 }
+<div style="background-color: lightgrey; padding: 100px; border-radius: 10px;">
+    @using (Html.BeginForm())
+    {
+        @Html.AntiForgeryToken()
+        
+        <h2 style="text-align: center">Stödsystem, VoO</h2>
 
-@using (Html.BeginForm())
-{
-    @Html.AntiForgeryToken()
+        <br />
+        <br />
 
-    <div class="form-horizontal">
-        <hr />
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        @*@Html.HiddenFor(model => model.Id)*@
+        <div class="form-horizontal">
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.ClaimNumber, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10 decide-display-for">
-                @Html.DisplayFor(model => Model.ClaimNumber, null)
-                @Html.HiddenFor(model => Model.ClaimNumber)
+            @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+            @*@Html.HiddenFor(model => model.Id)*@
+
+            <div class="form-group">
+                @Html.LabelFor(model => model.ClaimNumber, htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="decide-display-for">
+                    @Html.DisplayFor(model => Model.ClaimNumber, null)
+                    @Html.HiddenFor(model => Model.ClaimNumber)
+                </div>
+            </div>
+
+            <div class="form-group">
+                @Html.LabelFor(model => model.CareCompany, htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="decide-display-for">
+                    @Html.DisplayFor(model => Model.CareCompany, null)
+                    @Html.HiddenFor(model => Model.CareCompany)
+                </div>
+            </div>
+
+            <div class="form-group">
+                @Html.LabelFor(model => model.AssistantSSN, htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="decide-display-for">
+                    @Html.DisplayFor(model => Model.AssistantSSN, null)
+                    @Html.HiddenFor(model => Model.AssistantSSN)
+                </div>
+            </div>
+
+            <div class="form-group">
+                @Html.LabelFor(model => model.QualifyingDate, htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="decide-display-for">
+                    @Html.DisplayFor(model => Model.QualifyingDate, null)
+                    @Html.HiddenFor(model => Model.QualifyingDate)
+                </div>
+            </div>
+
+            <div class="form-group">
+                @Html.LabelFor(model => model.LastDayOfSickness, htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="decide-display-for">
+                    @Html.DisplayFor(model => Model.LastDayOfSickness, null)
+                    @Html.HiddenFor(model => Model.LastDayOfSickness)
+                </div>
+            </div>
+
+            <div class="form-group">
+                @Html.LabelFor(model => model.ClaimSum, htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="decide-display-for">
+                    @Html.DisplayFor(model => Model.ClaimSum, null)
+                    @Html.HiddenFor(model => Model.ClaimSum)
+                </div>
+            </div>
+
+            <div class="form-group">
+                @Html.LabelFor(model => model.ApprovedSum, htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="col-md-10">
+                    @Html.EditorFor(model => model.ApprovedSum, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.ApprovedSum, "", new { @class = "text-danger" })
+                </div>
+            </div>
+
+            <div class="form-group">
+                @Html.LabelFor(model => model.RejectedSum, htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="col-md-10">
+                    @Html.EditorFor(model => model.RejectedSum, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.RejectedSum, "", new { @class = "text-danger" })
+                </div>
+            </div>
+
+            <div class="form-group">
+                @Html.LabelFor(model => model.Comment, htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="col-md-10">
+                    @Html.EditorFor(model => model.Comment, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.Comment, "", new { @class = "text-danger" })
+                </div>
             </div>
         </div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.CareCompany, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10 decide-display-for">
-                @Html.DisplayFor(model => Model.CareCompany, null)
-                @Html.HiddenFor(model => Model.CareCompany)
+        <div class="row">
+            <div class="col col-md-offset-2">
+                <input class="btn btn-primary" type="submit" value="Besluta" />
             </div>
         </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.AssistantSSN, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10 decide-display-for">
-                @Html.DisplayFor(model => Model.AssistantSSN, null)
-                @Html.HiddenFor(model => Model.AssistantSSN)
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.QualifyingDate, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10 decide-display-for">
-                @Html.DisplayFor(model => Model.QualifyingDate, null)
-                @Html.HiddenFor(model => Model.QualifyingDate)
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.LastDayOfSickness, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10 decide-display-for">
-                @Html.DisplayFor(model => Model.LastDayOfSickness, null)
-                @Html.HiddenFor(model => Model.LastDayOfSickness)
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.ClaimSum, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10 decide-display-for">
-                @Html.DisplayFor(model => Model.ClaimSum, null)
-                @Html.HiddenFor(model => Model.ClaimSum)
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.ApprovedSum, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.ApprovedSum, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.ApprovedSum, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.RejectedSum, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.RejectedSum, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.RejectedSum, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.Comment, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Comment, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Comment, "", new { @class = "text-danger" })
-            </div>
-        </div>
-    </div>
-
-    <div class="row">
-        <div class="col col-md-offset-2">
-            <input class="btn btn-primary" type="submit" value="Beslut" />
-        </div>
-    </div>
-}
+    }
+</div>
