--- a/Sjuklöner/Views/Claims/StodSystemLogin.cshtml
+++ b/Sjuklöner/Views/Claims/StodSystemLogin.cshtml
@@ -5,7 +5,7 @@
 }
 
 
-<div class="row">
+<div class="row" style="background-color:lightgrey; padding:300px; border-radius: 10px;">
     <section id="loginForm">
         @*@using (Html.BeginForm("StodSystemLogin", "Claims", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "form-horizontal", role = "form" }))*@
 
@@ -14,10 +14,10 @@
             @Html.AntiForgeryToken()
             @Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
-            <div class="frame-procapita-login no-breadcrumb-top">
+            <div class="frame-procapita-login">
 
                 <div class="grey-filler bold-14">
-                    Inloggning: Stödsystem, VoO
+                    Inloggning: Stödsystem, Vård- och Omsorg
                 </div>
 
 
